Preview-Service.yaml
kind: Service
apiVersion: v1
metadata: 
   name: token-test-preview-service
spec:
   selector:
     app: token-test
   ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
